--- a/HealingArts/Map.storyboard
+++ b/HealingArts/Map.storyboard
@@ -35,11 +35,41 @@
                     <connections>
                         <outlet property="mapView" destination="ICr-ya-rC1" id="un8-F3-301"/>
                         <segue destination="Zhf-Qy-ZFO" kind="show" identifier="toMapDetailSegue" id="Lwo-oC-aFV"/>
+                        <segue destination="4LR-qp-mLZ" kind="show" identifier="toSanctuaryMap" id="ssX-UW-TrZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EcZ-Ir-BEy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2934.7826086956525" y="-630.13392857142856"/>
+        </scene>
+        <!--Sanctuary Map View Controller-->
+        <scene sceneID="O2c-aR-QBx">
+            <objects>
+                <viewController id="4LR-qp-mLZ" customClass="SanctuaryMapViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JJt-bQ-zrT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TeY-uV-4MA">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TeY-uV-4MA" firstAttribute="leading" secondItem="E71-It-ULi" secondAttribute="leading" id="gOI-E5-HrA"/>
+                            <constraint firstItem="E71-It-ULi" firstAttribute="bottom" secondItem="TeY-uV-4MA" secondAttribute="bottom" id="wWp-NW-7VJ"/>
+                            <constraint firstItem="TeY-uV-4MA" firstAttribute="top" secondItem="E71-It-ULi" secondAttribute="top" id="xJT-PL-aGG"/>
+                            <constraint firstItem="E71-It-ULi" firstAttribute="trailing" secondItem="TeY-uV-4MA" secondAttribute="trailing" id="zm5-1q-bgu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="E71-It-ULi"/>
+                    </view>
+                    <connections>
+                        <outlet property="sanctuaryMapView" destination="TeY-uV-4MA" id="RrY-ow-Xdd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hIf-MY-yTm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2935" y="131"/>
         </scene>
         <!--Details-->
         <scene sceneID="0OG-VJ-a0H">
