--- a/HealingArts/Collection.storyboard
+++ b/HealingArts/Collection.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Upu-4V-2b6">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,11 +15,11 @@
             <objects>
                 <viewController id="Upu-4V-2b6" customClass="ArtistsArtViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2aO-MZ-eIE">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pzp-yy-2rf">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b4o-IB-kS7">
                                     <size key="itemSize" width="425" height="252"/>
@@ -53,6 +57,7 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="lef-eh-aYr" id="X9x-Xi-DSy"/>
+                                            <segue destination="wdH-rp-GMV" kind="show" id="9Y3-LF-f71"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -78,6 +83,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t0s-Cn-hJO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3660.8695652173915" y="671.65178571428567"/>
+        </scene>
+        <!--ArtworkDetails-->
+        <scene sceneID="FCP-3l-oau">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ArtworkDetails" id="wdH-rp-GMV" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9qd-3U-OLp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4355" y="617"/>
         </scene>
     </scenes>
 </document>
