--- a/HealingArts/Map/Map.storyboard
+++ b/HealingArts/Map/Map.storyboard
@@ -36,6 +36,7 @@
                         <outlet property="mapView" destination="ICr-ya-rC1" id="un8-F3-301"/>
                         <segue destination="Zhf-Qy-ZFO" kind="show" identifier="toMapDetailSegue" id="Lwo-oC-aFV"/>
                         <segue destination="4LR-qp-mLZ" kind="show" identifier="toSanctuaryMap" id="ssX-UW-TrZ"/>
+                        <segue destination="SO0-2V-uiU" kind="show" identifier="toArtworkDetailSegue" id="uwl-ca-WCM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EcZ-Ir-BEy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -50,9 +51,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TeY-uV-4MA">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TeY-uV-4MA">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                             </mapView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sanctuaryMap" translatesAutoresizingMaskIntoConstraints="NO" id="pbq-eN-4lV">
+                                <rect key="frame" x="0.0" y="177" width="414" height="491"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -69,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hIf-MY-yTm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2935" y="131"/>
+            <point key="canvasLocation" x="2934.7826086956525" y="130.58035714285714"/>
         </scene>
         <!--Details-->
         <scene sceneID="0OG-VJ-a0H">
@@ -104,6 +109,14 @@
             </objects>
             <point key="canvasLocation" x="3731.884057971015" y="-630.13392857142856"/>
         </scene>
+        <!--ArtworkDetails-->
+        <scene sceneID="PZC-kn-LWw">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ArtworkDetails" id="SO0-2V-uiU" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Azx-uy-XuX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3649" y="-209"/>
+        </scene>
         <!--Map-->
         <scene sceneID="Fme-FA-pxJ">
             <objects>
@@ -124,4 +137,7 @@
             <point key="canvasLocation" x="2122" y="-630"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sanctuaryMap" width="3036" height="3262"/>
+    </resources>
 </document>
