--- a/HealingArts/ArtworkDetails.storyboard
+++ b/HealingArts/ArtworkDetails.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3WJ-k3-ZZj">
-                                <rect key="frame" x="55" y="44" width="300" height="300"/>
+                                <rect key="frame" x="55" y="44" width="299" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="Lhz-JC-zzW" userLabel="height = 250"/>
                                     <constraint firstAttribute="width" constant="300" id="SAu-lI-AHh"/>
@@ -96,14 +96,29 @@
                                     <constraint firstAttribute="height" constant="425" id="jmr-l4-2gw"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0pd-Ip-ePA">
+                                <rect key="frame" x="362" y="84" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="dbJ-fQ-EOf"/>
+                                    <constraint firstAttribute="height" constant="40" id="uCz-J9-uJC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Map"/>
+                                <connections>
+                                    <action selector="onMapButtonPressed:" destination="U4q-yq-WLn" eventType="touchUpInside" id="sCS-wj-xnQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="h65-Wy-nNB" firstAttribute="trailing" secondItem="Hey-We-VOr" secondAttribute="trailing" constant="32" id="9aQ-cq-P7H"/>
+                            <constraint firstItem="0pd-Ip-ePA" firstAttribute="top" secondItem="h65-Wy-nNB" secondAttribute="top" constant="40" id="9vU-Dk-gZk"/>
                             <constraint firstItem="3WJ-k3-ZZj" firstAttribute="top" secondItem="h65-Wy-nNB" secondAttribute="top" id="IbF-aL-dFK"/>
+                            <constraint firstItem="0pd-Ip-ePA" firstAttribute="leading" secondItem="3WJ-k3-ZZj" secondAttribute="trailing" constant="8" id="Ksb-Qa-jbQ"/>
                             <constraint firstItem="3WJ-k3-ZZj" firstAttribute="top" secondItem="h65-Wy-nNB" secondAttribute="top" id="Les-g3-S19"/>
                             <constraint firstItem="Hey-We-VOr" firstAttribute="leading" secondItem="h65-Wy-nNB" secondAttribute="leading" constant="32" id="Qvl-ty-b0m"/>
                             <constraint firstItem="Hey-We-VOr" firstAttribute="top" secondItem="3WJ-k3-ZZj" secondAttribute="bottom" constant="8" symbolic="YES" id="x4S-Fs-9xg"/>
+                            <constraint firstItem="h65-Wy-nNB" firstAttribute="trailing" secondItem="0pd-Ip-ePA" secondAttribute="trailing" constant="12" id="x7O-GS-arZ"/>
                             <constraint firstItem="3WJ-k3-ZZj" firstAttribute="leading" secondItem="h65-Wy-nNB" secondAttribute="leading" constant="55" id="yr7-mw-Ahc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="h65-Wy-nNB"/>
