--- a/HealingArts/Donor.storyboard
+++ b/HealingArts/Donor.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqh-zS-57S">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,16 +15,19 @@
             <objects>
                 <viewController id="fqh-zS-57S" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LAm-tX-gDW">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="xKG-ES-xWU"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Donors" id="JXl-pY-hiM"/>
+                    <tabBarItem key="tabBarItem" title="Donors" image="imageedit_2_9948483433" id="JXl-pY-hiM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V7u-Nq-h9V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2025" y="1321"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="imageedit_2_9948483433" width="25" height="25"/>
+    </resources>
 </document>
